--- a/javascript-frontend-katas/package.json
+++ b/javascript-frontend-katas/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "jest": "^26.6.3"
   },
-  "homepage": "https://github.com/northcoders/CORE-B1-katas#readme"
+  "homepage": "https://github.com/northcoders/CORE-B1-katas#readme",
+  "dependencies": {
+    "range-inclusive": "^1.0.2"
+  }
 }
